#pragma once

class Actualizable
{
private:
    /* data */
public:

    virtual void Actualizar() = 0;
};
