class Cahara
{
private:
    /* data */
public:
    Cahara(/* args */);
    ~Cahara();
};

Cahara::Cahara(/* args */)
{
}

Cahara::~Cahara()
{
}
