class Amuleto
{
private:
    /* data */
public:
    Amuleto(/* args */);
    ~Amuleto();
};

Amuleto::Amuleto(/* args */)
{
}

Amuleto::~Amuleto()
{
}
