#include <iostream>
#include <cstdio>

class Habilidad
{
public:
  Habilidad() {}
  ~Habilidad() {}
};

class Devorar : public Habilidad
{
public:
  Devorar() {}
  ~Devorar() {}
};

class Robar : public Habilidad
{
public:
  Robar() {}
  ~Robar() {}
};

class Hablar : public Habilidad
{
public:
  Hablar() {}
  ~Hablar() {}
};
