#include <iostream>
#include <cstdio>

class Item
{
public:
  Item() {}
  ~Item() {}
};
