#include <iostream>
#include <cstdio>

class Mapa
{
public:
  Mapa() {}
  ~Mapa() {}
};

class Mazmorra : public Mapa
{
public:
  Mazmorra() {}
  ~Mazmorra() {}
};
