class Planta
{
private:
    /* data */
public:
    Planta(/* args */);
    ~Planta();
};

Planta::Planta(/* args */)
{
}

Planta::~Planta()
{
}
