#include <iostream>
#include <cstdio>

class Mision
{
public:
  Mision() {}
  ~Mision() {}
};

class MatarALEgarde : public Mision
{
public:
  MatarALEgarde() {}
  ~MatarALEgarde() {}
};

class RescatarALegarde : public Mision
{
public:
  RescatarALegarde() {}
  ~RescatarALegarde() {}
};
