class MonedaDorada
{
private:
    /* data */
public:
    MonedaDorada(/* args */);
    ~MonedaDorada();
};

MonedaDorada::MonedaDorada(/* args */)
{
}

MonedaDorada::~MonedaDorada()
{
}
