class Personaje
{
private:
  int estadisticas;
public:
  Personaje(/* args */);
  ~Personaje();
};

Personaje::Personaje(/* args */)
{
}

Personaje::~Personaje()
{
}
