class PersonajeJugable
{
private:
    /* data */
public:
    PersonajeJugable(/* args */);
    ~PersonajeJugable();
};

PersonajeJugable::PersonajeJugable(/* args */)
{
}

PersonajeJugable::~PersonajeJugable()
{
}
