class DArce
{
private:
    /* data */
public:
    DArce(/* args */);
    ~DArce();
};

DArce::DArce(/* args */)
{
}

DArce::~DArce()
{
}
