class Enki
{
private:
    /* data */
public:
    Enki(/* args */);
    ~Enki();
};

Enki::Enki(/* args */)
{
}

Enki::~Enki()
{
}
