class Girl
{
private:
    /* data */
public:
    Girl(/* args */);
    ~Girl();
};

Girl::Girl(/* args */)
{
}

Girl::~Girl()
{
}
