class LEgarde
{
private:
    /* data */
public:
    LEgarde(/* args */);
    ~LEgarde();
};

LEgarde::LEgarde(/* args */)
{
}

LEgarde::~LEgarde()
{
}
