class Moonless
{
private:
    /* data */
public:
    Moonless(/* args */);
    ~Moonless();
};

Moonless::Moonless(/* args */)
{
}

Moonless::~Moonless()
{
}
