class Nashrah
{
private:
    /* data */
public:
    Nashrah(/* args */);
    ~Nashrah();
};

Nashrah::Nashrah(/* args */)
{
}

Nashrah::~Nashrah()
{
}
