class PersonajeNoJugable
{
private:
    /* data */
public:
    PersonajeNoJugable(/* args */);
    ~PersonajeNoJugable();
};

PersonajeNoJugable::PersonajeNoJugable(/* args */)
{
}

PersonajeNoJugable::~PersonajeNoJugable()
{
}
