class Pocion
{
private:
    /* data */
public:
    Pocion(/* args */);
    ~Pocion();
};

Pocion::Pocion(/* args */)
{
}

Pocion::~Pocion()
{
}
