class Ragnvaldr
{
private:
    /* data */
public:
    Ragnvaldr(/* args */);
    ~Ragnvaldr();
};

Ragnvaldr::Ragnvaldr(/* args */)
{
}

Ragnvaldr::~Ragnvaldr()
{
}
